Code indentation fix