@@ -4,6 +4,7 @@
 package io.greenscreens.websocket;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.ParameterizedType;
@@ -56,41 +57,42 @@ public class WebSocketOperations<T> {
 
 	@Inject
 	private BeanManagerUtil beanManagerUtil;
-	
+
 	private boolean requiredSession = false;
 
 	public WebSocketOperations() {
 		super();
 	}
-	
+
 	public void setRequiredSession(boolean requiredSession) {
 		this.requiredSession = requiredSession;
 	}
 
 	/**
-	 * Decrypt RSA/AES data from web, but only if AES in session is not found
-	 * If new AES, store to session
+	 * Decrypt RSA/AES data from web, but only if AES in session is not found If new
+	 * AES, store to session
+	 * 
 	 * @param session
 	 * @param encrypt
 	 * @return
-	 * @throws Exception 
+	 * @throws Exception
 	 */
 	private String decryptData(final WebSocketSession session, final ExtEncrypt encrypt) throws Exception {
 
 		IAesKey crypt = (IAesKey) session.getUserProperties().get(TnConstants.HTTP_SEESION_ENCRYPT);
 		String data = null;
-				
+
 		if (crypt == null) {
 			crypt = Security.initAESfromRSA(encrypt.getK());
 			session.getUserProperties().put(TnConstants.HTTP_SEESION_ENCRYPT, crypt);
-			data = crypt.decrypt(encrypt.getD());												
+			data = crypt.decrypt(encrypt.getD());
 		} else {
-			data = Security.decodeRequest(encrypt.getD(), encrypt.getK(), crypt);						
+			data = Security.decodeRequest(encrypt.getD(), encrypt.getK(), crypt);
 		}
-		
+
 		return data;
 	}
-	
+
 	/**
 	 * Decrypt encrypted JSON data and continue as normal
 	 * 
@@ -100,8 +102,9 @@ public class WebSocketOperations<T> {
 	 * @return
 	 */
 	@SuppressWarnings("unchecked")
-	public final ExtJSDirectResponse<T> processEncrypted(final ExtJSDirectRequest<T> request, final WebSocketSession session, final String uri) {
-		
+	public final ExtJSDirectResponse<T> processEncrypted(final ExtJSDirectRequest<T> request,
+			final WebSocketSession session, final String uri) {
+
 		ExtJSDirectResponse<T> directResponse = null;
 		ExtJSResponse response = null;
 		boolean err = false;
@@ -109,7 +112,7 @@ public class WebSocketOperations<T> {
 		try {
 
 			final int size = request.getData() == null ? 0 : request.getData().size();
-			
+
 			if (size == 0) {
 				response = new ExtJSResponse(false, TnErrors.E0000.getMessage());
 				response.setCode(TnErrors.E0000.getCode());
@@ -120,18 +123,18 @@ public class WebSocketOperations<T> {
 				if (paramData instanceof JsonNode) {
 
 					request.getData().clear();
-					
+
 					final JsonNode jnode = (JsonNode) paramData;
 					final ObjectMapper mapper = JsonDecoder.getJSONEngine();
 					final ExtEncrypt encrypt = mapper.treeToValue(jnode, ExtEncrypt.class);
-					final String data = decryptData(session, encrypt);										
+					final String data = decryptData(session, encrypt);
 					final JsonNode node = JsonDecoder.parse(data);
-					
+
 					if (node.isArray()) {
-			
+
 						final ArrayNode arr = (ArrayNode) node;
 						final Iterator<JsonNode> it = arr.iterator();
-						
+
 						while (it.hasNext()) {
 							request.getData().add((T) it.next());
 						}
@@ -141,23 +144,23 @@ public class WebSocketOperations<T> {
 					}
 
 					directResponse = process(request, session.getHttpSession(), uri);
-					
+
 				} else {
 					response = new ExtJSResponse(false, TnErrors.E0000.getMessage());
 					response.setCode(TnErrors.E0000.getCode());
 				}
 			}
-			
+
 		} catch (Exception e) {
-			
+
 			err = true;
 			response = new ExtJSResponse(e, e.getMessage());
 
 			LOG.error(e.getMessage());
-            LOG.debug(e.getMessage(), e);
-			
+			LOG.debug(e.getMessage(), e);
+
 		} finally {
-			
+
 			if (directResponse == null) {
 				directResponse = new ExtJSDirectResponse<T>(request, response);
 				if (err) {
@@ -165,12 +168,13 @@ public class WebSocketOperations<T> {
 				}
 			}
 		}
-		
+
 		return directResponse;
 	}
 
 	@SuppressWarnings({ "rawtypes", "unchecked" })
-	public final ExtJSDirectResponse<T> process(final ExtJSDirectRequest<T> request, final HttpSession session, final String uri) {
+	public final ExtJSDirectResponse<T> process(final ExtJSDirectRequest<T> request, final HttpSession session,
+			final String uri) {
 
 		ExtJSDirectResponse<T> directResponse = null;
 		ExtJSResponse response = null;
@@ -184,33 +188,33 @@ public class WebSocketOperations<T> {
 			final AnnotatedType annType = beanManagerUtil.getBeanManager().createAnnotatedType(beanClass);
 			final AnnotatedMethod selectedMethod = findMethod(request, annType);
 			final ExtJSDirect direct = beanClass.getAnnotation(ExtJSDirect.class);
-			
+
 			boolean error = checkForError(annType, selectedMethod, direct, session, uri);
-			
+
 			if (error) {
 				response = new ExtJSResponse(false, TnErrors.E0001.getString());
 				response.setCode(TnErrors.E0001.getCode());
-			} else {				
+			} else {
 				final List<AnnotatedParameter<?>> paramList = selectedMethod.getParameters();
 				final Object[] params = fillParams(request, paramList);
-				
+
 				error = isParametersInvalid(paramList, params);
 				if (error) {
 					response = new ExtJSResponse(false, TnErrors.E0002.getMessage());
-					response.setCode(TnErrors.E0002.getCode());					
+					response.setCode(TnErrors.E0002.getCode());
 				} else {
 					response = executeBean(bean, selectedMethod, params);
 				}
 			}
 
 		} catch (Exception e) {
-            LOG.debug(e.getMessage(), e);
+			LOG.debug(e.getMessage(), e);
 			response = new ExtJSResponse(e, e.getMessage());
 			err = true;
 		} finally {
-			
+
 			directResponse = new ExtJSDirectResponse<T>(request, response);
-			
+
 			if (err) {
 				directResponse.setType(WebSocketInstruction.ERR.getText());
 			}
@@ -219,11 +223,11 @@ public class WebSocketOperations<T> {
 		return directResponse;
 	}
 
-	/// PRIVATE SECTION	
-	
-	private boolean checkForError(final AnnotatedType<?> annType, final AnnotatedMethod<?> selectedMethod, 
-			                      final ExtJSDirect direct, final HttpSession session, final String uri) {
-		
+	/// PRIVATE SECTION
+
+	private boolean checkForError(final AnnotatedType<?> annType, final AnnotatedMethod<?> selectedMethod,
+			final ExtJSDirect direct, final HttpSession session, final String uri) {
+
 		boolean error = false;
 
 		// check for path
@@ -236,12 +240,12 @@ public class WebSocketOperations<T> {
 		} else if (selectedMethod == null) {
 			error = true;
 		}
-		
+
 		return error;
 	}
 
 	private boolean checkPath(final String uri, final String[] paths) {
-		
+
 		boolean result = false;
 
 		for (String path : paths) {
@@ -252,7 +256,7 @@ public class WebSocketOperations<T> {
 			}
 
 			final int idx = uri.indexOf(path);
-			if ( idx == 0 || idx == 1) {
+			if (idx == 0 || idx == 1) {
 				result = true;
 				break;
 			}
@@ -281,11 +285,11 @@ public class WebSocketOperations<T> {
 
 		AnnotatedMethod<?> selectedMethod = null;
 		final Set<AnnotatedMethod<?>> aMethods = annType.getMethods();
-		
+
 		for (final AnnotatedMethod<?> aMethod : aMethods) {
-		
+
 			final ExtJSMethod annMethod = aMethod.getAnnotation(ExtJSMethod.class);
-			
+
 			if (annMethod == null) {
 				continue;
 			}
@@ -299,67 +303,69 @@ public class WebSocketOperations<T> {
 		return selectedMethod;
 	}
 
-	private Object[] fillParams(final ExtJSDirectRequest<T> request, final List<AnnotatedParameter<?>> methodParams) throws IOException {
-		
+	@SuppressWarnings({ "rawtypes", "unchecked" })
+	private Object[] fillParams(final ExtJSDirectRequest<T> request, final List<AnnotatedParameter<?>> methodParams)
+			throws IOException {
+
 		final int paramSize = methodParams.size();
 		final int incomingParamsSize = request.getData() == null ? 0 : request.getData().size();
 
 		final ObjectMapper mapper = JsonDecoder.getJSONEngine();
-		
+
 		final Object[] params = new Object[paramSize];
-		
+
 		for (int i = 0; i < paramSize; i++) {
 
 			if (i < incomingParamsSize) {
-		
+
 				final Object paramData = request.getData().get(i);
-				
+
 				if (paramData instanceof JsonNode) {
-				
+
 					final JsonNode jnode = (JsonNode) paramData;
-					
+
 					if (jnode != null) {
-						
+
 						Class<?> jType = null;
-						
+
 						AnnotatedParameter<?> param = methodParams.get(i);
 						Type type = param.getBaseType();
-						
+
 						if (type instanceof ParameterizedType) {
 							ParameterizedType ptype = (ParameterizedType) param.getBaseType();
 
 							Type rtype = ptype.getRawType();
-							if (Collection.class.isAssignableFrom((Class<?>) rtype)) {								
-								
+							if (Collection.class.isAssignableFrom((Class<?>) rtype)) {
+
 								Type t1 = ptype.getActualTypeArguments()[0];
 								Class<?> gen = null;
-								
+
 								try {
-								    gen = Class.forName(getClassName(t1)); 
-								    Collection l = createListOfType((Class)rtype, gen);
-								    params[i] = l;
-								    
-								    ArrayNode anode = (ArrayNode) jnode;
-								    
-								    for (JsonNode node: anode ) {
-								    	l.add(mapper.treeToValue(node, gen));
-								    }
-								    
+									gen = Class.forName(getClassName(t1));
+									Collection l = createListOfType((Class) rtype, gen);
+									params[i] = l;
+
+									ArrayNode anode = (ArrayNode) jnode;
+
+									for (JsonNode node : anode) {
+										l.add(mapper.treeToValue(node, gen));
+									}
+
 								} catch (Exception e) {
 									LOG.error(e.getMessage());
 									LOG.trace(e.getMessage(), e);
 								}
-								
+
 							} else {
 								jType = (Class<?>) param.getBaseType();
 								params[i] = mapper.treeToValue(jnode, jType);
 							}
-											
+
 						} else {
 							jType = (Class<?>) param.getBaseType();
 							params[i] = mapper.treeToValue(jnode, jType);
 						}
-															
+
 					}
 
 				} else {
@@ -374,14 +380,16 @@ public class WebSocketOperations<T> {
 	static String NAME_PREFIX = "class ";
 
 	private static String getClassName(Type type) {
-	    String fullName = type.toString();
-	    if (fullName.startsWith(NAME_PREFIX))
-	        return fullName.substring(NAME_PREFIX.length());
-	    return fullName;
+		String fullName = type.toString();
+		if (fullName.startsWith(NAME_PREFIX))
+			return fullName.substring(NAME_PREFIX.length());
+		return fullName;
 	}
-	
+
+	@SuppressWarnings("unchecked")
 	public static <T> Collection<T> createListOfType(Class<?> collection, T type)
-			throws InstantiationException, IllegalAccessException {
+			throws InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException,
+			NoSuchMethodException, SecurityException {
 
 		if (collection.isInterface()) {
 			return new ArrayList<T>();
@@ -391,22 +399,23 @@ public class WebSocketOperations<T> {
 			return new ArrayList<T>();
 		}
 
-		Collection<T> tmp = (Collection<T>) collection.newInstance();
-		return tmp;
+		// Collection<T> tmp = (Collection<T>) collection.newInstance();
+		return (Collection<T>) collection.getDeclaredConstructor().newInstance();
 	}
-	
+
 	/**
 	 * Check for @Required annotation,in such case, parameter can't be null
+	 * 
 	 * @param paramList
 	 * @param params
 	 * @return
 	 */
 	private boolean isParametersInvalid(List<AnnotatedParameter<?>> paramList, Object[] params) {
-		
+
 		boolean sts = false;
 		Required req = null;
 		int i = 0;
-		
+
 		for (AnnotatedParameter<?> param : paramList) {
 			req = param.getAnnotation(Required.class);
 			if (req != null && params[i] == null) {
@@ -415,50 +424,51 @@ public class WebSocketOperations<T> {
 			}
 			i++;
 		}
-		
+
 		return sts;
 	}
 
 	private ExtJSResponse executeBean(final Bean<?> bean, final AnnotatedMethod<?> method, final Object[] params) {
-		
+
 		ExtJSResponse response = null;
 		IDestructibleBeanInstance<?> di = null;
 
 		try {
 			final Method javaMethod = method.getJavaMember();
-			//final AnnotatedType [] types = javaMethod.getAnnotatedParameterTypes();
-			
-			if (javaMethod.isAccessible()) {
-				javaMethod.setAccessible(true);
-			}
+			// final AnnotatedType [] types = javaMethod.getAnnotatedParameterTypes();
 
 			di = beanManagerUtil.getDestructibleBeanInstance(bean);
 			final Object beanInstance = di.getInstance();
-			
+
+			// if (javaMethod.isAccessible()) {
+			if (javaMethod.canAccess(beanInstance)) {
+				javaMethod.setAccessible(true);
+			}
+
 			Class<?> clazz = javaMethod.getReturnType();
-			Object obj =  javaMethod.invoke(beanInstance, params);
+			Object obj = javaMethod.invoke(beanInstance, params);
 
 			if (void.class == clazz || Void.class == clazz) {
 				response = new ExtJSResponse(true, null);
 			} else if (ExtJSResponse.class.isAssignableFrom(clazz)) {
 				response = (ExtJSResponse) obj;
-			} else {				
+			} else {
 				ExtJSObjectResponse<Object> objResponse = new ExtJSObjectResponse<>();
 				objResponse.setData(obj);
 				response = objResponse;
-			}							
-			//response = (ExtJSResponse) javaMethod.invoke(beanInstance, params);
+			}
+			// response = (ExtJSResponse) javaMethod.invoke(beanInstance, params);
 
 		} catch (Exception e) {
 			LOG.error(e.getMessage());
-            LOG.debug(e.getMessage(), e);
+			LOG.debug(e.getMessage(), e);
 			response = new ExtJSResponse(e, e.getMessage());
 		} finally {
-			
+
 			if (di != null) {
 				di.release();
 			}
-			
+
 		}
 
 		return response;
